fixed log in alignment

--- a/Code/UTut_University_Tutor/app/assets/stylesheets/users.scss
+++ b/Code/UTut_University_Tutor/app/assets/stylesheets/users.scss
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 #form{
   font-size: 1.2em;
   margin-bottom: 30px;
-  color: #555f61	;
+  color: #909090	;
   font-weight: bold;
 }
 
